@@ -126,10 +126,7 @@ class Gem::Commands::InstallCommand < Gem::Command
       end
     end
 
-    e = Gem::SystemExitException.new "Exiting RubyGems with exit_code = #{exit_code}"
-    e.exit_code = exit_code
-
-    raise e
+    raise Gem::SystemExitException, exit_code
   end
 
 end
