@@ -71,6 +71,14 @@ class Gem::VerificationError < Gem::Exception; end
 ##
 # Raised to indicate that a system exit should occur with the specified
 # exit_code
+
 class Gem::SystemExitException < SystemExit
   attr_accessor :exit_code
+
+  def initialize(exit_code)
+    @exit_code = exit_code
+
+    super "Exiting RubyGems with exit_code #{exit_code}"
+  end
+
 end
